--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -63,7 +63,7 @@ content = "You must replace the **baseURL** in **hugo.toml** file when deploying
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
 keywords = ["Boilerplate", "Hugo"]
-description = "Hugo & Tailwindcss Starter"
+description = "Sejal's Blog"
 author = "zeon.studio"
 twitter = "zeon_studio"
 image = "images/og-image.png"
