--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -66,7 +66,7 @@ keywords = ["Boilerplate", "Hugo"]
 description = "Sejal's Blog"
 author = "zeon.studio"
 twitter = "zeon_studio"
-image = "images/og-image.png"
+image = "images/favicon.png"
 
 
 # site verifications
